<resources>
    <string name="app_name">Calculator</string>
    <string name="clear">C</string>
    <string name="open_brace">(</string>
    <string name="close_brace">)</string>
    <string name="allclear">AC</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="_9">9</string>
    <string name="add">+</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="subtract">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="dot">.</string>
    <string name="multiply">*</string>
    <string name="zero">0</string>
    <string name="equal">=</string>
    <string name="divide">/</string>
</resources>