<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_operation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:textAlignment="textEnd"/>
    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_operation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="35sp"
        android:layout_marginTop="30dp"
        android:paddingVertical="30dp"
        android:layout_marginEnd="20dp"
        android:textAlignment="textEnd"
        android:text="@string/zero"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/in_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_result">

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="30dp"
            android:backgroundTint="@color/orange"
            android:paddingVertical="20dp"
            android:text="@string/clear"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toTopOf="@+id/in_layout" />

        <Button
            android:id="@+id/btn_openbrace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="30dp"
            android:backgroundTint="@color/grey"
            android:paddingVertical="20dp"
            android:text="@string/open_brace"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@+id/btn_clear"
            app:layout_constraintTop_toTopOf="@+id/in_layout" />

        <Button
            android:id="@+id/btn_closebrace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="30dp"
            android:backgroundTint="@color/grey"
            android:paddingVertical="20dp"
            android:text="@string/close_brace"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@+id/btn_openbrace"
            app:layout_constraintTop_toTopOf="@+id/in_layout" />

        <Button
            android:id="@+id/btn_allclear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="30dp"
            android:backgroundTint="@color/orange"
            android:paddingVertical="20dp"
            android:text="@string/allclear"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_closebrace"
            app:layout_constraintTop_toTopOf="@+id/in_layout" />

        <Button
            android:id="@+id/btn_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="30dp"
            android:backgroundTint="@color/blue"
            android:paddingVertical="20dp"
            android:text="@string/btn7"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_clear" />

        <Button
            android:id="@+id/btn_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="30dp"
            android:backgroundTint="@color/blue"
            android:paddingVertical="20dp"
            android:text="@string/btn8"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@+id/btn_7"
            app:layout_constraintTop_toBottomOf="@+id/btn_openbrace" />

        <Button
            android:id="@+id/btn_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="30dp"
            android:backgroundTint="@color/blue"
            android:paddingVertical="20dp"
            android:text="@string/_9"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@+id/btn_8"
            app:layout_constraintTop_toBottomOf="@+id/btn_closebrace" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="30dp"
            android:backgroundTint="@color/red"
            android:paddingVertical="20dp"
            android:text="@string/add"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_9"
            app:layout_constraintTop_toBottomOf="@+id/btn_allclear" />

        <Button
            android:id="@+id/btn_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="30dp"
            android:backgroundTint="@color/blue"
            android:paddingVertical="20dp"
            android:text="@string/_4"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_7" />

        <Button
            android:id="@+id/btn_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="30dp"
            android:backgroundTint="@color/blue"
            android:paddingVertical="20dp"
            android:text="@string/_5"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@+id/btn_4"
            app:layout_constraintTop_toBottomOf="@+id/btn_8" />

        <Button
            android:id="@+id/btn_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="30dp"
            android:backgroundTint="@color/blue"
            android:paddingVertical="20dp"
            android:text="@string/_6"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@+id/btn_5"
            app:layout_constraintTop_toBottomOf="@+id/btn_9" />

        <Button
            android:id="@+id/btn_subtract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="30dp"
            android:backgroundTint="@color/red"
            android:paddingVertical="20dp"
            android:text="@string/subtract"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_6"
            app:layout_constraintTop_toBottomOf="@+id/btn_add" />

        <Button
            android:id="@+id/btn_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="30dp"
            android:backgroundTint="@color/blue"
            android:paddingVertical="20dp"
            android:text="@string/_1"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_4" />

        <Button
            android:id="@+id/btn_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="30dp"
            android:backgroundTint="@color/blue"
            android:paddingVertical="20dp"
            android:text="@string/_2"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@+id/btn_1"
            app:layout_constraintTop_toBottomOf="@+id/btn_5" />

        <Button
            android:id="@+id/btn_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="30dp"
            android:backgroundTint="@color/blue"
            android:paddingVertical="20dp"
            android:text="@string/_3"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@+id/btn_2"
            app:layout_constraintTop_toBottomOf="@+id/btn_6" />

        <Button
            android:id="@+id/btn_multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="30dp"
            android:backgroundTint="@color/red"
            android:paddingVertical="20dp"
            android:text="@string/multiply"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_3"
            app:layout_constraintTop_toBottomOf="@+id/btn_subtract" />

        <Button
            android:id="@+id/btn_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="35dp"
            android:backgroundTint="@color/blue"
            android:paddingVertical="20dp"
            android:text="@string/dot"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_1" />

        <Button
            android:id="@+id/btn_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="35dp"
            android:backgroundTint="@color/blue"
            android:paddingVertical="20dp"
            android:text="@string/zero"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_dot"
            app:layout_constraintTop_toBottomOf="@+id/btn_2" />

        <Button
            android:id="@+id/btn_equal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="35dp"
            android:backgroundTint="@color/orange"
            android:paddingVertical="20dp"
            android:text="@string/equal"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_0"
            app:layout_constraintTop_toBottomOf="@+id/btn_3" />

        <Button
            android:id="@+id/btn_divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="35dp"
            android:backgroundTint="@color/red"
            android:paddingVertical="20dp"
            android:text="@string/divide"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_equal"
            app:layout_constraintTop_toBottomOf="@+id/btn_multiply" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>